# remotedesk

qt-controller/: CMakeLists.txt  README.md
qt-controller/include/common/: Protocol.h
qt-controller/include/controller/: App.h  AuthClient.h  SignalingClient.h  UiMainWindow.h  WebRtcPeer.h
qt-controller/src/controller/: App.cpp  AuthClient.cpp  SignalingClient.cpp  UiMainWindow.cpp  WebRtcPeer.cpp
